*** empty log message ***

--- a/sourceediting/development/org.eclipse.wst.xml.vex.releng/build.properties
+++ b/sourceediting/development/org.eclipse.wst.xml.vex.releng/build.properties
@@ -16,10 +16,9 @@ testFeatureToBuildID=org.eclipse.wst.xml.vex_tests.feature
 
 # MUST BE SET #
 JAVA50_HOME=${JAVA_HOME}
-dependencyURLs=http://download.eclipse.org/tools/orbit/downloads/drops/R20090825191606/orbit-R20090825191606.zip
-repositoryURLs=http://download.eclipse.org/releases/galileo
-featureIDsToInstall=org.eclipse.sdk.ide,org.eclipse.wst.xml_ui.feature
-
+dependencyURLs=http://download.eclipse.org/tools/orbit/downloads/drops/S20100508202910/orbit-S20100508202910.zip
+repositoryURLs=http://download.eclipse.org/releases/helios
+IUsToInstall=org.eclipse.sdk.feature.group,org.eclipse.wst.xml_ui.feature.feature.group
 
 
 #what steps should we do? default: build.steps=buildUpdate,buildZips,buildTests,generateDigests,test,publish,cleanup
