--- a/sourceediting/development/org.eclipse.wst.xml.vex.releng/build.properties
+++ b/sourceediting/development/org.eclipse.wst.xml.vex.releng/build.properties
@@ -18,7 +18,8 @@ testFeatureToBuildID=org.eclipse.wst.xml.vex_tests.feature
 JAVA50_HOME=${JAVA_HOME}
 dependencyURLs=http://download.eclipse.org/tools/orbit/downloads/drops/S20100508202910/orbit-S20100508202910.zip
 repositoryURLs=http://download.eclipse.org/releases/helios
-IUsToInstall=IUsToInstall=org.eclipse.sdk.feature.group+org.eclipse.sdk.ide
+featureIDsToInstall=org.eclipse.sdk+org.eclipse.wst.xml_ui.feature
+pluginIDsToInstall=org.eclipse.sdk.ide
 
 
 
