*** empty log message ***

--- a/sourceediting/development/org.eclipse.wst.xml.vex.releng/build.properties
+++ b/sourceediting/development/org.eclipse.wst.xml.vex.releng/build.properties
@@ -17,10 +17,8 @@ testFeatureToBuildID=org.eclipse.wst.xml.vex_tests.feature
 # MUST BE SET #
 JAVA50_HOME=${JAVA_HOME}
 dependencyURLs=http://download.eclipse.org/tools/orbit/downloads/drops/S20100508202910/orbit-S20100508202910.zip
-repositoryURLs=http://download.eclipse.org/releases/helios
-featureIDsToInstall=org.eclipse.sdk+org.eclipse.wst.xml_ui.feature+org.eclipse.sdk.ide
-
-
+repositoryURLs=http://download.eclipse.org/athena/repos/eclipse-Update-S-3.6M5-201001291300.zip,http://download.eclipse.org/releases/helios
+IUsToInstall=org.eclipse.sdk.feature.group+org.eclipse.sdk.ide
 
 #what steps should we do? default: build.steps=buildUpdate,buildZips,buildTests,generateDigests,test,publish,cleanup
 #build.steps=buildUpdate,buildZips,buildTests,generateDigests,test,publish,cleanup
