*** empty log message ***

--- a/sourceediting/development/org.eclipse.wst.xml.vex.releng/build.properties
+++ b/sourceediting/development/org.eclipse.wst.xml.vex.releng/build.properties
@@ -16,9 +16,9 @@ testFeatureToBuildID=org.eclipse.wst.xml.vex_tests.feature
 
 # MUST BE SET #
 JAVA50_HOME=${JAVA_HOME}
-repositoryURLs=http://download.eclipse.org/athena/repos/eclipse-Update-S-3.6M5-201001291300.zip,http://download.eclipse.org/releases/helios,http://download.eclipse.org/tools/orbit/downloads/drops/S20100508202910/repository
+dependencyURLs=http://download.eclipse.org/tools/orbit/downloads/drops/R20100114021427/bundles/org.w3c.css.sac_1.3.1.v200903091627.jar
+repositoryURLs=http://download.eclipse.org/athena/repos/eclipse-Update-S-3.6M5-201001291300.zip,http://download.eclipse.org/releases/helios
 IUsToInstall=org.eclipse.sdk.feature.group+org.eclipse.sdk.ide+org.eclipse.wst.xml_ui.feature.feature.group
-pluginIDsToInstall=org.w3c.css.sac+org.apache.xerces+org.apache.xalan
 
 #what steps should we do? default: build.steps=buildUpdate,buildZips,buildTests,generateDigests,test,publish,cleanup
 #build.steps=buildUpdate,buildZips,buildTests,generateDigests,test,publish,cleanup
