keep from updating the existing build.properties file.

--- a/sourceediting/development/org.eclipse.wst.xml.vex.releng/build.properties
+++ b/sourceediting/development/org.eclipse.wst.xml.vex.releng/build.properties
@@ -31,5 +31,10 @@ parallelCompilation=true
 generateFeatureVersionSuffix=true
 individualSourceBundles=true
 
+#bootstrap.xml properties
+WORKINGDIR=${WORKINGDIR}
+COMMON_TOOLS=${COMMON_TOOLS}
+relengCommonBuilderDir=${relengCommonBuilderDir}
+relengBaseBuilderDir=${relengBaseBuilderDir}
 writableBuildRoot=${WORKSPACE}/build
 ## END PROJECT BUILD PROPERTIES ##
