*** empty log message ***

--- a/sourceediting/development/org.eclipse.wst.xml.vex.releng/build.properties
+++ b/sourceediting/development/org.eclipse.wst.xml.vex.releng/build.properties
@@ -32,9 +32,7 @@ generateFeatureVersionSuffix=true
 individualSourceBundles=true
 
 #bootstrap.xml properties
-WORKINGDIR=${WORKINGDIR}
-COMMON_TOOLS=${COMMON_TOOLS}
-relengCommonBuilderDir=${relengCommonBuilderDir}
-relengBaseBuilderDir=${relengBaseBuilderDir}
+relengCommonBuilderDir=${WORKSPACE}/tools/org.eclipse.dash.common.releng
+relengBaseBuilderDir=${WORKSPACE}/tools/org.eclipse.releng.basebuilder
 writableBuildRoot=${WORKSPACE}/build
 ## END PROJECT BUILD PROPERTIES ##
