Bug 322729: Define a new content type "XML Document" and use this content type as sub-type for DITA and DocBook.
Signed-off-by: Florian Thienel <florian@thienel.org>

--- a/sourceediting/plugins/org.eclipse.wst.xml.vex.dita/plugin.properties
+++ b/sourceediting/plugins/org.eclipse.wst.xml.vex.dita/plugin.properties
@@ -22,7 +22,7 @@ doctype.map=DITA Map
 style.classed=DITA Classed
 style.mapStyle=DITA Map
 
-contentType.name = DITA Content Type
-contentType.map.name = DITA Map Content Type
-contentType.ditaval.name = DITAVal Content Type
-contentType.topic.name = DITA Topic Content Type
+contentType.name = DITA
+contentType.map.name = DITA Map
+contentType.ditaval.name = DITAVal
+contentType.topic.name = DITA Topic
