--- a/sourceediting/plugins/org.eclipse.wst.xml.vex.ui/plugin.properties
+++ b/sourceediting/plugins/org.eclipse.wst.xml.vex.ui/plugin.properties
@@ -85,3 +85,4 @@ menu.Column.MoveLeft.name= Move Left
 menu.Column.MoveRight.name= Move Right
 menu.Column.Remove.name= Remove
 menu.Style.name= Style
+contentType.XmlDocument.name=XML Document
