--- a/sourceediting/plugins/org.eclipse.wst.xml.vex.docbook/plugin.xml
+++ b/sourceediting/plugins/org.eclipse.wst.xml.vex.docbook/plugin.xml
@@ -2,6 +2,12 @@
 <?eclipse version="3.2"?>
 <plugin>
 
+	<extension point="org.eclipse.core.contenttype.contentTypes">
+		<content-type id="org.eclipse.wst.xml.vex.ui.docbook4_5" name="%contentType.name"
+			base-type="org.eclipse.wst.xml.vex.ui.XmlDocument" file-extensions="xml, docbook">
+		</content-type>
+	</extension>
+
    <extension
          id="docbook4_5"
          name="%doctype.docbook4_5"
@@ -44,43 +50,7 @@
          </rootElement>
       </doctype>
    </extension>
-   <!--
-   <extension
-         id="sdocbook1_1"
-         name="%doctype.sdocbook1_1"
-         point="org.eclipse.wst.xml.vex.ui.doctypes">
-      <doctype
-            dtd="s1.1/sdocbook.dtd"
-            outlineProvider="org.eclipse.wst.xml.vex.docbook.DocBookOutlineProvider"
-            publicId="-//OASIS//DTD Simplified DocBook XML V1.1//EN"
-            systemId="http://www.oasis-open.org/docbook/xml/simple/1.1/sdocbook.dtd">
-         <rootElement
-               name="article">
-         </rootElement>
-         <rootElement
-               name="appendix">
-         </rootElement>
-         <rootElement
-               name="sect1">
-         </rootElement>
-         <rootElement
-               name="sect2">
-         </rootElement>
-         <rootElement
-               name="sect3">
-         </rootElement>
-         <rootElement
-               name="sect4">
-         </rootElement>
-         <rootElement
-               name="sect5">
-         </rootElement>
-         <rootElement
-               name="section">
-         </rootElement>
-            </doctype>
-   </extension>
-   -->
+
    <extension
          id="docbook-plain"
          name="%style.docbook-plain"
