[323292] Added MylynWiki Text steps to the documentation build.

--- a/sourceediting/documentation/org.eclipse.wst.xml.vex.documentation/build.properties
+++ b/sourceediting/documentation/org.eclipse.wst.xml.vex.documentation/build.properties
@@ -1,8 +1,8 @@
 bin.includes = plugin.xml,\
-               html/,\
                toc.xml,\
                tocconcepts.xml,\
                toctasks.xml,\
                META-INF/,\
-               plugin.properties
+               plugin.properties,\
+               help/
 generateSourceBundle=false
