--- a/sourceediting/documentation/org.eclipse.wst.xml.vex.documentation/plugin.xml
+++ b/sourceediting/documentation/org.eclipse.wst.xml.vex.documentation/plugin.xml
@@ -5,14 +5,8 @@
    <extension
          point="org.eclipse.help.toc">
       <toc
-            file="toc.xml"
+            file="help/toc.xml"
             primary="true">
-      </toc>
-      <toc
-            file="tocconcepts.xml">
-      </toc>
-      <toc
-            file="toctasks.xml">
       </toc>
    </extension>
 
