--- a/sourceediting/documentation/org.eclipse.wst.xml.vex.documentation/pom.xml
+++ b/sourceediting/documentation/org.eclipse.wst.xml.vex.documentation/pom.xml
@@ -14,4 +14,35 @@
 		<relativePath>../../development/org.eclipse.wst.xml.vex.releng/pom.xml</relativePath>
 	</parent>
 
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-antrun-plugin</artifactId>
+					<version>1.4</version>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>mylyn-wiki-text</id>
+						<phase>generated-sources</phase>
+						<goals>
+							<goal>run</goal>
+						</goals>
+						<configuration>
+							<tasks>
+								<ant antfile="buildHelp.xml" inheritRefs="true" />
+							</tasks>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
 </project>
