--- a/sourceediting/documentation/org.eclipse.wst.xml.vex.documentation/pom.xml
+++ b/sourceediting/documentation/org.eclipse.wst.xml.vex.documentation/pom.xml
@@ -32,7 +32,7 @@
 				<executions>
 					<execution>
 						<id>mylyn-wiki-text</id>
-						<phase>generated-sources</phase>
+						<phase>generate-sources</phase>
 						<goals>
 							<goal>run</goal>
 						</goals>
