--- a/sourceediting/tests/org.eclipse.wst.xml.vex.core.tests/pom.xml
+++ b/sourceediting/tests/org.eclipse.wst.xml.vex.core.tests/pom.xml
@@ -18,7 +18,7 @@
 			<plugin>
 				<groupId>org.sonatype.tycho</groupId>
 				<artifactId>maven-osgi-test-plugin</artifactId>
-				<version>0.8.0</version>
+				<version>${tycho-version}</version>
 				<configuration>
 					<useUIHarness>true</useUIHarness>
 					<testSuite>org.eclipse.wst.xml.vex.core.tests</testSuite>
