--- a/sourceediting/development/org.eclipse.wst.xml.vex.releng/pom.xml
+++ b/sourceediting/development/org.eclipse.wst.xml.vex.releng/pom.xml
@@ -9,7 +9,7 @@
 	<packaging>pom</packaging>
 
 	<properties>
-		<tycho-version>0.9.0</tycho-version>
+		<tycho-version>0.10.0</tycho-version>
 	</properties>
  
 	<modules>
@@ -61,8 +61,15 @@
 						<encoding>UTF-8</encoding>
 					</configuration>
 				</plugin>
+				<plugin>
+					<groupId>org.sonatype.tycho</groupId>
+					<artifactId>maven-osgi-source-plugin</artifactId>
+					<version>${tycho-version}</version>
+					<configuration>
+						<encoding>UTF-8</encoding>
+					</configuration>
+				</plugin>
 			</plugins>
-			
 		</pluginManagement>
 	</build>
 	<repositories>
