--- a/sourceediting/plugins/org.eclipse.wst.xml.vex/build.properties
+++ b/sourceediting/plugins/org.eclipse.wst.xml.vex/build.properties
@@ -6,3 +6,4 @@ bin.includes = META-INF/,\
                plugin.properties,\
                wtp_prod32.gif,\
                wtp_prod32.png
+source = src_does_not_exist/
