--- a/sourceediting/tests/org.eclipse.wst.xml.vex.core.tests/pom.xml
+++ b/sourceediting/tests/org.eclipse.wst.xml.vex.core.tests/pom.xml
@@ -29,6 +29,21 @@
 							<artifactId>org.eclipse.sdk.ide</artifactId>
 							<version>0.0.0</version>
 						</dependency>
+						<dependency>
+							<type>p2-installable-unit</type>
+							<artifactId>org.eclipse.wst.xml.ui</artifactId>
+							<version>0.0.0</version>
+						</dependency>
+						<dependency>
+							<type>p2-installable-unit</type>
+							<artifactId>org.eclipse.wst.xsd.ui</artifactId>
+							<version>0.0.0</version>
+						</dependency>
+						<dependency>
+							<type>p2-installable-unit</type>
+							<artifactId>org.eclipse.wst.dtd.ui</artifactId>
+							<version>0.0.0</version>
+						</dependency>
 					</dependencies>
 				</configuration>
 			</plugin>
