--- a/sourceediting/documentation/org.eclipse.wst.xml.vex.documentation/build.properties
+++ b/sourceediting/documentation/org.eclipse.wst.xml.vex.documentation/build.properties
@@ -6,3 +6,4 @@ bin.includes = plugin.xml,\
                plugin.properties,\
                help/
 generateSourceBundle=false
+source.. = src_does_not_exist/
