--- a/sourceediting/plugins/org.eclipse.wst.xml.vex.dita/build.properties
+++ b/sourceediting/plugins/org.eclipse.wst.xml.vex.dita/build.properties
@@ -4,3 +4,4 @@ bin.includes = plugin.xml,\
                META-INF/,\
                css/,\
                dita11/
+source.. = src_does_not_exist/
