bug 331462 use the WTP XML catalog to load DTDs
Signed-off-by: Florian Thienel <florian@thienel.org>

--- a/sourceediting/tests/org.eclipse.wst.xml.vex.ui.tests/plugin.properties
+++ b/sourceediting/tests/org.eclipse.wst.xml.vex.ui.tests/plugin.properties
@@ -10,3 +10,4 @@
 ###############################################################################
 pluginName= Vex UI Tests
 providerName= Eclipse.org
+contentType.name=Vex Test XML Document Type
