fixed some warnings in the manifests
Signed-off-by: Florian Thienel <florian@thienel.org>

--- a/sourceediting/plugins/org.eclipse.wst.xml.vex.core/build.properties
+++ b/sourceediting/plugins/org.eclipse.wst.xml.vex.core/build.properties
@@ -2,8 +2,7 @@ bin.includes = plugin.properties,\
                META-INF/,\
                .,\
                lib/,\
-               lib/flute.jar,\
-               bin/
+               lib/flute.jar
 src.includes = lib/
 source.. = src/,\
            src-emf/
