--- a/sourceediting/plugins/org.eclipse.wst.xml.vex.ui/build.properties
+++ b/sourceediting/plugins/org.eclipse.wst.xml.vex.ui/build.properties
@@ -5,6 +5,5 @@ bin.includes = plugin.xml,\
                plugin.properties,\
                icons/,\
                META-INF/,\
-               schema/,\
-               bin/
+               schema/
 source.. = src/
