Bug 331615 add new plug-in to the Vex features and integrate it into the build

--- a/sourceediting/development/org.eclipse.wst.xml.vex.releng/pom.xml
+++ b/sourceediting/development/org.eclipse.wst.xml.vex.releng/pom.xml
@@ -19,6 +19,7 @@
 		<module>../../plugins/org.eclipse.wst.xml.vex.ui</module>
 		<module>../../plugins/org.eclipse.wst.xml.vex.dita</module>
 		<module>../../plugins/org.eclipse.wst.xml.vex.docbook</module>
+		<module>../../plugins/org.eclipse.wst.xml.vex.xhtml</module>
 		<module>../../documentation/org.eclipse.wst.xml.vex.documentation</module>
 		<module>../../features/org.eclipse.wst.xml.vex.feature</module>
 		<module>../../features/org.eclipse.wst.xml.vex_sdk.feature</module>
