--- a/sourceediting/plugins/org.eclipse.wst.xml.vex.xhtml/build.properties
+++ b/sourceediting/plugins/org.eclipse.wst.xml.vex.xhtml/build.properties
@@ -5,3 +5,7 @@ bin.includes = META-INF/,\
                styles/
 jars.compile.order = .
 source.. = src/
+src.includes = plugin.xml,\
+               plugin.properties,\
+               styles/,\
+               META-INF/
