Commenting the DITA 1.1 catalog contributions.

--- a/sourceediting/plugins/org.eclipse.wst.xml.vex.dita/plugin.xml
+++ b/sourceediting/plugins/org.eclipse.wst.xml.vex.dita/plugin.xml
@@ -21,6 +21,7 @@
 		</content-type>
 	</extension>
 
+ <!-- DITA 1.1 DTD catalog contributions-->
  <extension
        point="org.eclipse.wst.xml.core.catalogContributions">
     <catalogContribution
