bug 321681: Vex editors renamed (to avoid acronyms): "Vex XML Editor" into "Visual XML Editor" "Vex XML Multipage Editor" into "Visual/Source XML Editor (Experimental)"

--- a/sourceediting/plugins/org.eclipse.wst.xml.vex.ui/plugin.properties
+++ b/sourceediting/plugins/org.eclipse.wst.xml.vex.ui/plugin.properties
@@ -27,15 +27,15 @@ PluginProjectDecorator.name=Vex Plug-in Project Decorator
 PluginProjectNature.name=Vex Plugin Project Nature
 StylePropertyPage.name=Vex Style
 VexCommandCategory.name=Vex XML Editor
-VexEditor.name=Vex XML Editor
-VexEditor.multipage.name=Vex Multipage XML Editor
+VexEditor.name=Visual XML Editor
+VexEditor.multipage.name=Visual/Source XML Editor (Experimental)
 VexEditorContext.name=Editing XML Documents
 VexViewCategory.name=Vex
 
 extensionPoint.doctypes=Vex Document Types
 extensionPoint.styles=Vex Styles
 
-command.category.name= Vex - Visual Editor for XML 
+command.category.name= Vex - Visual Editor for XML
 command.addElement.name= Add Element...
 command.duplicateSelection.name= &Duplicate Selection
 command.convertElement.name= Convert Element To...
