bug 342628: Avoid acronym "Vex"; in "New.." wizards add the keyword "Vex"

--- a/sourceediting/plugins/org.eclipse.wst.xml.vex.ui/plugin.properties
+++ b/sourceediting/plugins/org.eclipse.wst.xml.vex.ui/plugin.properties
@@ -12,28 +12,29 @@
 pluginName= Vex UI
 providerName= Eclipse.org
 
-BuildProblemDecorator.name=Vex Plug-in Build Problem Decorator
-ConfigurationView.name=Vex Configuration
-DebugView.name=Vex Debug
-DoctypePropertyPage.name=Vex Document Type
+BuildProblemDecorator.name=Visual XML Plug-in Build Problem Decorator
+ConfigurationView.name=Visual XML Configuration
+DebugView.name=Visual XML Debug
 DocumentPerspective.name=Document
 NewDocumentWizard.name=Document
-NewDocumentWizard.desc=Create an XML document using the Vex editor.
-NewPluginProjectWizard.name=Vex Plug-in Project
-NewPluginProjectWizard.desc=Create a new Vex Plug-in project.
+NewDocumentWizard.desc=Create an XML document using the Visual Editor for XML.
+NewPluginProjectWizard.name=Visual XML Plug-in Project
+NewPluginProjectWizard.desc=Create a Visual XML Plug-in project to register XML types and to associate styles to edit these types of files with the Visual XML Editor.
 NewWizardCategory.name=XML Authoring
-PluginProjectBuilder.name=Vex Plug-in Builder
-PluginProjectDecorator.name=Vex Plug-in Project Decorator
-PluginProjectNature.name=Vex Plugin Project Nature
-StylePropertyPage.name=Vex Style
-VexCommandCategory.name=Vex XML Editor
+PluginProjectBuilder.name=Visual XML Plug-in Builder
+PluginProjectDecorator.name=Visual XML Plug-in Project Decorator
+PluginProjectNature.name=Visual XML Plug-in Project Nature
+DoctypePropertyPage.name=Visual XML Document Type
+StylePropertyPage.name=Visual XML Style
+VexCommandCategory.name=Visual XML Editor
 VexEditor.name=Visual XML Editor
 VexEditor.multipage.name=Visual/Source XML Editor (Experimental)
 VexEditorContext.name=Editing XML Documents
-VexViewCategory.name=Vex
+VexViewCategory.name=XML Authoring
+Keyword.Vex=Vex
 
-extensionPoint.doctypes=Vex Document Types
-extensionPoint.styles=Vex Styles
+extensionPoint.doctypes=Visual XML Document Types
+extensionPoint.styles=Visual XML Styles
 
 command.category.name= Vex - Visual Editor for XML
 command.addElement.name= Add Element...
