use own schemas and DTDs to test resolving, in order to reduce dependencies to otherwise unused plug-ins

--- a/sourceediting/tests/org.eclipse.wst.xml.vex.core.tests/build.properties
+++ b/sourceediting/tests/org.eclipse.wst.xml.vex.core.tests/build.properties
@@ -4,4 +4,5 @@ bin.includes = META-INF/,\
                .,\
                projectFiles/,\
                bin/,\
-               plugin.properties
+               plugin.properties,\
+               plugin.xml
